# nano-16

./: CMakeLists.txt  INST-REFSHEET.txt  NAN-ISA.txt  test.asm
assembler/: CMakeLists.txt
assembler/include/: asmlib.h  assembler.h  byte_emitter.h  object_file_writer.h  parser.h  tokeniser.h
assembler/src/: asmlib.c  assembler.c  byte_emitter.c  main.c  object_file_writer.c  parser.c  tokeniser.c
assembler/tests/: tester.py
assembler/tests/instructions/: alu.json
linker/: CMakeLists.txt
linker/include/: linklib.h  objectFileReader.h
linker/src/: linklib.c  main.c  objectFileReader.c
